Versão 0.6 - Manter conexão com chat (cada 5s)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="conteudo/logo-uol-icon.png">
 </head>
 <body>
+    <!-- Tela de login -->
     <aside class="tela-login">
         <img src="conteudo/logo-uol.svg" alt="">
         <input class="caixa-login" type="text" placeholder="Digite seu nome">
@@ -20,14 +21,17 @@
             <p>Entrar</p>
         </div>
     </aside>
+    <!-- Cabeçario -->
     <header>
         <div class="icones-header">
             <img class="logo-header" src="conteudo/logo-uol.svg" alt="">
             <img class="icone__pessoas-header" src="conteudo/icone-pessoas.svg" alt="">
         </div>
     </header>
+    <!-- Conteudo do chat -> é criado dinamicamente -->
     <main class="janela-chat">
     </main>
+    <!-- Caixa de enviar mensagens -->
     <footer>
         <div class="icones-footer">
             <!-- <textarea> no lugar de input -->
@@ -35,7 +39,9 @@
             <img class="icone__enviar-footer" src="conteudo/botao-enviar.svg" alt="">
         </div>
     </footer>
+    <!-- API -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- script -->
     <script src="script.js"></script>
 </body>
 </html>
