--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Tela de login -->
     <aside class="tela-login">
-        <img src="conteudo/logo-uol.svg" alt="">
+        <img src="conteudo/logo-uol.svg" alt="logo-uol">
         <input class="caixa-login" type="text" placeholder="Digite seu nome" data-identifier="enter-name">
         <div class="botao-entrar" onclick="liberarSite()" data-identifier="start">
             <p>Entrar</p>
@@ -24,10 +24,61 @@
     <!-- Cabeçario -->
     <header>
         <div class="icones-header">
-            <img class="logo-header" src="conteudo/logo-uol.svg" alt="">
-            <img class="icone__pessoas-header" src="conteudo/icone-pessoas.svg" alt="">
+            <img class="logo-header" src="conteudo/logo-uol.svg" alt="logo-uol">
+            <img class="icone__pessoas-header" src="conteudo/icone-pessoas.svg" alt="icone-pessoas" onclick="mostrarParticipantes()">
         </div>
     </header>
+    <section class="lista-participantes escondido">
+        <h2 class="opcoes-escolha">
+            Escolha um contato para enviar mensagem:
+        </h2>
+        <div class="participantes">
+            <div class="caixa-opcoes">
+                <div class="opcoes-selecionar">
+                    <img src="conteudo/icone-pessoas.svg" alt="icone-pessoas">
+                    <p>Todos</p>
+                </div>
+                <img src="conteudo/icone-marcado.svg" class="escondido" alt="icone-marcado">
+            </div>
+            <div class="caixa-opcoes">
+                <div class="opcoes-selecionar">
+                    <img src="conteudo/icone-pessoa.svg" alt="icone-pessoa">
+                    <p>João</p>
+                </div>
+                <img src="conteudo/icone-marcado.svg" class="escondido" alt="icone-marcado">
+            </div>
+            <div class="caixa-opcoes">
+                <div class="opcoes-selecionar">
+                    <img src="conteudo/icone-pessoa.svg" alt="icone-pessoa">
+                    <p>João</p>
+                </div>
+                <img src="conteudo/icone-marcado.svg" class="escondido" alt="icone-marcado">
+            </div>
+        </div>
+        <h2 class="opcoes-escolha">
+            Escolha a visibilidade:
+        </h2>
+        <!-- div com as mesmas classes de cima para poupar tempo -->
+        <div class="visibilidade">
+            <div class="caixa-opcoes">
+                <div class="opcoes-selecionar">
+                    <img src="conteudo/cadeado-aberto.svg" alt="cadeado-aberto">
+                    <p>Público</p>
+                </div>
+                <img src="conteudo/icone-marcado.svg" class="escondido" alt="icone-marcado">
+            </div>
+            <div class="caixa-opcoes">
+                <div class="opcoes-selecionar">
+                    <img src="conteudo/cadeado-fechado.svg" alt="cadeado-fechado">
+                    <p>Reservadamente</p>
+                </div>
+                <img src="conteudo/icone-marcado.svg" class="escondido" alt="icone-marcado">
+            </div>
+        </div>
+    </section>
+    <aside class="area-opaca" onclick="esconderParticipantes()">
+
+    </aside>
     <!-- Conteudo do chat -> é criado dinamicamente -->
     <main class="janela-chat">
     </main>
@@ -36,7 +87,7 @@
         <div class="icones-footer">
             <!-- <textarea> no lugar de input -->
             <input class="caixa-mensagem" type="text" placeholder="Escreva aqui...">
-            <img class="icone__enviar-footer" src="conteudo/botao-enviar.svg" alt="" onclick="enviarMensagem()" data-identifier="send-message">
+            <img class="icone__enviar-footer" src="conteudo/botao-enviar.svg" alt="botao-enviar" onclick="enviarMensagem()" data-identifier="send-message">
         </div>
     </footer>
     <!-- API -->
