--- a/index.html
+++ b/index.html
@@ -21,36 +21,16 @@
             <p>Entrar</p>
         </div>
     </aside>
-    <!-- Cabeçario -->
-    <header>
-        <div class="icones-header">
-            <img class="logo-header" src="conteudo/logo-uol.svg" alt="logo-uol">
-            <img class="icone__pessoas-header" src="conteudo/icone-pessoas.svg" alt="icone-pessoas" onclick="mostrarParticipantes()">
-        </div>
-    </header>
+    <!-- Area que irá aparecer ao clicar nos participantes -->
     <section class="lista-participantes escondido">
         <h2 class="opcoes-escolha">
             Escolha um contato para enviar mensagem:
         </h2>
         <div class="participantes">
-            <div class="caixa-opcoes">
+            <div class="caixa-opcoes" onclick="selecionarDestinatario(this)">
                 <div class="opcoes-selecionar">
                     <img src="conteudo/icone-pessoas.svg" alt="icone-pessoas">
-                    <p>Todos</p>
-                </div>
-                <img src="conteudo/icone-marcado.svg" class="escondido" alt="icone-marcado">
-            </div>
-            <div class="caixa-opcoes">
-                <div class="opcoes-selecionar">
-                    <img src="conteudo/icone-pessoa.svg" alt="icone-pessoa">
-                    <p>João</p>
-                </div>
-                <img src="conteudo/icone-marcado.svg" class="escondido" alt="icone-marcado">
-            </div>
-            <div class="caixa-opcoes">
-                <div class="opcoes-selecionar">
-                    <img src="conteudo/icone-pessoa.svg" alt="icone-pessoa">
-                    <p>João</p>
+                    <p class="nome">Todos</p>
                 </div>
                 <img src="conteudo/icone-marcado.svg" class="escondido" alt="icone-marcado">
             </div>
@@ -60,14 +40,14 @@
         </h2>
         <!-- div com as mesmas classes de cima para poupar tempo -->
         <div class="visibilidade">
-            <div class="caixa-opcoes">
+            <div class="caixa-visibilidade" onclick="selecionarVisibilidade(this)" data-identifier="visibility">
                 <div class="opcoes-selecionar">
                     <img src="conteudo/cadeado-aberto.svg" alt="cadeado-aberto">
                     <p>Público</p>
                 </div>
                 <img src="conteudo/icone-marcado.svg" class="escondido" alt="icone-marcado">
             </div>
-            <div class="caixa-opcoes">
+            <div class="caixa-visibilidade" onclick="selecionarVisibilidade(this)" data-identifier="visibility">
                 <div class="opcoes-selecionar">
                     <img src="conteudo/cadeado-fechado.svg" alt="cadeado-fechado">
                     <p>Reservadamente</p>
@@ -76,9 +56,14 @@
             </div>
         </div>
     </section>
-    <aside class="area-opaca" onclick="esconderParticipantes()">
-
-    </aside>
+    <aside class="area-opaca" onclick="esconderParticipantes()"></aside>
+    <!-- Cabeçario -->
+    <header>
+        <div class="icones-header">
+            <img class="logo-header" src="conteudo/logo-uol.svg" alt="logo-uol">
+            <img class="icone__pessoas-header" src="conteudo/icone-pessoas.svg" alt="icone-pessoas" onclick="mostrarParticipantes()">
+        </div>
+    </header>
     <!-- Conteudo do chat -> é criado dinamicamente -->
     <main class="janela-chat">
     </main>
